--- a/index.html
+++ b/index.html
@@ -204,6 +204,18 @@
     </div>
   </div>
 
+  <!-- Section header -->
+  <h2 class="w3-center w3-hide-small" style="font-size:30px;"><b>EVENTS,</b></h2>
+  <h3 class="w3-center w3-hide-large w3-hide-medium" style="font-size:20px;"><b>EVENTS,</b></h3>
+  <p class="w3-center w3-hide-small" style="font-size:25px; margin-top:-10px;">The team at Astral Forge are hard at work developing and showcasing our games to audiences.</p>
+  <p class="w3-center w3-hide-large w3-hide-medium" style="font-size:15px; margin-top:-10px;">The team at Astral Forge are hard at work developing and showcasing our games to audiences.</p>
+
+  <div class="w3-container">
+  <h3 class="w3-center" style="font-size:20px;"><b>Tranzfuser</b></h3>
+  <p class="w3-center w3-hide-large w3-hide-medium" style="font-size:15px; margin-top:-10px;">During June-September 2025 the founded members of Astral Forge took part in the Tranzfuser programme.</p>
+    
+  </div>
+
   <br>
   </main>
 
