--- a/index.html
+++ b/index.html
@@ -204,15 +204,36 @@
     </div>
   </div>
 
+  <br><br>
+    
   <!-- Section header -->
-  <h2 class="w3-center w3-hide-small" style="font-size:30px;"><b>EVENTS,</b></h2>
-  <h3 class="w3-center w3-hide-large w3-hide-medium" style="font-size:20px;"><b>EVENTS,</b></h3>
-  <p class="w3-center w3-hide-small" style="font-size:25px; margin-top:-10px;">The team at Astral Forge are hard at work developing and showcasing our games to audiences.</p>
-  <p class="w3-center w3-hide-large w3-hide-medium" style="font-size:15px; margin-top:-10px;">The team at Astral Forge are hard at work developing and showcasing our games to audiences.</p>
+  <h3 class="w3-center" style="font-size:20px;"><b>EVENTS,</b></h3>
+  <p class="w3-center" style="font-size:15px; margin-top:-10px;">The team at Astral Forge are hard at work developing and showcasing our games to audiences.</p>
 
   <div class="w3-container">
   <h3 class="w3-center" style="font-size:20px;"><b>Tranzfuser</b></h3>
   <p class="w3-center w3-hide-large w3-hide-medium" style="font-size:15px; margin-top:-10px;">During June-September 2025 the founded members of Astral Forge took part in the Tranzfuser programme.</p>
+
+  <div>
+   <div class="w3-row">
+    <!-- Side Picture -->
+    <div class="w3-col w3-container w3-hide-small" style="width:30%">
+      <!-- Placeholder -->
+      <img class="w3-image pictureOutline" style="height:300px" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
+    </div>
+    <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
+      <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="200px">
+    </div>
+
+    <!-- About Us section header -->
+    <div class="w3-col w3-container" style="width:70%">
+      <h1 style="font-size:20px;"><b>Tranzfuser</b></h1>
+      <p style="font-size:15px;">During June-September 2025 the founded members of Astral Forge took part in the Tranzfuser programme.</p>
+      <p style="font-size:15px;">This is a competitive graduate grant programme where teams are given funding and advice to help build their game and studio.
+      We used this time to begin development on Fate's Loop and start to build the company!</p>
+    </div>
+  </div>
+  
     
   </div>
 
