--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </div>
 
     <!-- About Us section header -->
-    <div class="w3-col w3-container" style="width:70%">
+    <div class="w3-col w3-container" style="width:70%; text-align:center;">
       <h1 style="font-size:20px;"><b>Tranzfuser</b></h1>
       <p style="font-size:15px;">During June-September 2025 the founded members of Astral Forge took part in the Tranzfuser programme.</p>
       <p style="font-size:15px;">This is a competitive graduate grant programme where teams are given funding and advice to help build their game and studio.
