--- a/index.html
+++ b/index.html
@@ -204,13 +204,35 @@
     </div>
   </div>
 
-  <br><br>
-    
+  <br><hr><br>
+  
   <!-- Section header -->
   <h3 class="w3-center"><b>EVENTS,</b></h3>
   <p class="w3-center" style="font-size:20px; margin-top:-10px;">The team at Astral Forge are hard at work developing and showcasing our games to audiences.</p>
   <br>
 
+  <div>
+   <div class="w3-row">
+    <!-- About Tranzfuser section header -->
+    <div class="w3-col w3-container" style="width:70%; text-align:center;">
+      <h1 style="font-size:20px;"><b>Protoplay</b></h1>
+      <p style="font-size:15px;">The 19th-20th of September saw the team at Astral Forge attend Protoplay in Dundee to showcase Fate's Loop.</p>
+      <p style="font-size:15px;">Showcasing our first game in another country was something we never expected and gave us a great insight into how people play and view our game.
+      We are using this information to make certain changes that we are positive players will love! It was also amazing to see the games from the other Tranzfuser teams in person.</p>
+    </div>
+
+     <!-- Side Picture -->
+    <div class="w3-col w3-container w3-hide-small" style="width:30%">
+      <!-- Placeholder -->
+      <img class="w3-image pictureOutline" style="max-height:100%" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
+    </div>
+    <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
+      <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
+    </div>
+  </div>
+
+  <br>
+    
   <div>
    <div class="w3-row">
     <!-- Side Picture -->
@@ -222,7 +244,7 @@
       <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
     </div>
 
-    <!-- About Us section header -->
+    <!-- About Tranzfuser section header -->
     <div class="w3-col w3-container" style="width:70%; text-align:center;">
       <h1 style="font-size:20px;"><b>Tranzfuser</b></h1>
       <p style="font-size:15px;">During June-September 2025 the founded members of Astral Forge took part in the Tranzfuser programme.</p>
