--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <img class="w3-image pictureOutline" style="max-height:100%" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
+      <img class="w3-image pictureOutline" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Loog" width="100%" height="100%">
     </div>
   </div>
 
