--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
    <div class="w3-row">
     <!-- About Tranzfuser section header -->
     <div class="w3-col w3-container" style="width:70%; text-align:center;">
-      <h1 style="font-size:20px;"><b>Protoplay</b></h1>
+      <h1 style="font-size:20px;"><b><u>Protoplay</u></b></h1>
       <p style="font-size:15px;">The 19th-20th of September saw the team at Astral Forge attend Protoplay in Dundee to showcase Fate's Loop.</p>
       <p style="font-size:15px;">Showcasing our first game in another country was something we never expected and gave us a great insight into how people play and view our game.
       We are using this information to make certain changes that we are positive players will love! It was also amazing to see the games from the other Tranzfuser teams in person.</p>
@@ -224,10 +224,10 @@
      <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline" style="max-height:100%" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline" style="max-height:100%" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Teams at Protoplay">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Loog" width="100%" height="100%">
+      <img class="w3-image pictureOutline" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Teams at Protoplay" width="100%" height="100%">
     </div>
   </div>
 
@@ -246,7 +246,7 @@
 
     <!-- About Tranzfuser section header -->
     <div class="w3-col w3-container" style="width:70%; text-align:center;">
-      <h1 style="font-size:20px;"><b>Tranzfuser</b></h1>
+      <h1 style="font-size:20px;"><b><u><a href="https://tranzfuser.com/">Tranzfuser</a></u></b></h1>
       <p style="font-size:15px;">During June-September 2025 the founded members of Astral Forge took part in the Tranzfuser programme.</p>
       <p style="font-size:15px;">This is a competitive graduate grant programme where teams are given funding and advice to help build their game and studio.
       We used this time to begin development on Fate's Loop and start to build the company!</p>
