--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <div class="w3-row">
     <!-- Side Picture -->
-    <div class="w3-col w3-container w3-hide-small" style="width:30%">
+    <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
       <img class="w3-image pictureOutline" style="height:300px" src="Images/ProtoPlayTeam.JPG" alt="The Team">
     </div>
@@ -224,7 +224,7 @@
      <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline" style="max-height:200px" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Teams at Protoplay">
+      <img class="w3-image pictureOutline w3-center" style="max-height:200px" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Teams at Protoplay">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Teams at Protoplay" width="100%" height="100%">
@@ -238,7 +238,7 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline" style="max-height:100%" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="max-height:100%" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
