--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </div>
 
      <!-- Side Picture -->
-    <div class="w3-col w3-container w3-hide-small" style="width:30%">
+    <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
       <img class="w3-image pictureOutline w3-center" style="max-height:200px" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Teams at Protoplay">
     </div>
@@ -236,7 +236,7 @@
   <div>
    <div class="w3-row">
     <!-- Side Picture -->
-    <div class="w3-col w3-container w3-hide-small" style="width:30%">
+    <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
       <img class="w3-image pictureOutline w3-center" style="max-height:100%" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
     </div>
