--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
      <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="max-height:200px" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Teams at Protoplay">
+      <img class="w3-image pictureOutline w3-center" style="max-height:200px" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/TranzfuserTeams.jpg" alt="Tranzfuser Teams at Protoplay" width="100%" height="100%">
+      <img class="w3-image pictureOutline" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay" width="100%" height="100%">
     </div>
   </div>
 
