--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="max-height:100%" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="max-height:100%" src="Images/UOSLogo.jpg" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
+      <img class="w3-image pictureOutline" src="Images/UOSLogo.jpg" alt="Tranzfuser Loog" width="100%" height="100%">
     </div>
 
     <!-- About Tranzfuser section header -->
