--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="max-height:100%" src="Images/UOSLogo.jpg" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="max-height:100%; max-width:400px;" src="Images/UOSLogo.jpg" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/UOSLogo.jpg" alt="Tranzfuser Loog" width="100%" height="100%">
@@ -246,7 +246,7 @@
      <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="max-height:200px" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
+      <img class="w3-image pictureOutline w3-center" style="max-height:200px; max-width:400px;" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay" width="100%" height="100%">
@@ -260,7 +260,7 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="max-height:100%" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="max-height:100%; max-width:400px;" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
