--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
    <div class="w3-row">
     <!-- About Tranzfuser section header -->
     <div class="w3-col w3-container" style="width:70%; text-align:center;">
-      <h1 style="font-size:20px;"><b><u>Protoplay</u></b></h1>
+      <h1 style="font-size:20px;"><b><u><a href="https://protoplay.co.uk/" target="_blank">Protoplay</a></u></b></h1>
       <p style="font-size:15px;">The 19th-20th of September saw the team at Astral Forge attend Protoplay in Dundee to showcase Fate's Loop.</p>
       <p style="font-size:15px;">Showcasing our first game in another country was something we never expected and gave us a great insight into how people play and view our game.
       We are using this information to make certain changes that we are positive players will love! It was also amazing to see the games from the other Tranzfuser teams in person.</p>
