--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <br>
 
   <div>
-   <div class="w3-row">
+   <div class="w3-row" style="border:thin solid blue;">
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
