--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <br>
 
   <div>
-   <div class="w3-row" style="border:thin solid blue;">
+   <div class="w3-row" style="border:thin solid #c7a6cf;">
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
@@ -234,7 +234,7 @@
   <br>
 
   <div>
-   <div class="w3-row">
+   <div class="w3-row" style="border:thin solid #c7a6cf;">
     <!-- About Tranzfuser section header -->
     <div class="w3-col w3-container" style="width:70%; text-align:center;">
       <h1 style="font-size:20px;"><b><u><a href="https://protoplay.co.uk/" target="_blank">Protoplay</a></u></b></h1>
@@ -256,7 +256,7 @@
   <br>
     
   <div>
-   <div class="w3-row">
+   <div class="w3-row" style="border:thin solid #c7a6cf;">
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
