--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
   <br>
 
   <div>
-   <div class="w3-row" style="border:thin solid #c7a6cf;">
+   <div class="w3-row" style="border:medium solid #c7a6cf;">
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="max-height:100%; max-width:400px;" src="Images/UOSLogo.jpg" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:100%; max-width:400px;" src="Images/UOSLogo.jpg" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/UOSLogo.jpg" alt="Tranzfuser Loog" width="100%" height="100%">
@@ -234,7 +234,7 @@
   <br>
 
   <div>
-   <div class="w3-row" style="border:thin solid #c7a6cf;">
+   <div class="w3-row" style="border:medium solid #c7a6cf;">
     <!-- About Tranzfuser section header -->
     <div class="w3-col w3-container" style="width:70%; text-align:center;">
       <h1 style="font-size:20px;"><b><u><a href="https://protoplay.co.uk/" target="_blank">Protoplay</a></u></b></h1>
@@ -246,7 +246,7 @@
      <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="max-height:200px; max-width:400px;" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
+      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:200px; max-width:400px;" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay" width="100%" height="100%">
@@ -256,11 +256,11 @@
   <br>
     
   <div>
-   <div class="w3-row" style="border:thin solid #c7a6cf;">
+   <div class="w3-row" style="border:medium solid #c7a6cf;">
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="max-height:100%; max-width:400px;" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:100%; max-width:400px;" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
