--- a/games.html
+++ b/games.html
@@ -66,7 +66,7 @@
  <!-- Header video -->
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; overflow:hidden; padding-top:50px;">
     <div>
-      <iframe width="100%" height="aspect-ratio: 16 / 9;" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
+      <iframe width="aspect-ratio: 16 / 9;" height="aspect-ratio: 16 / 9;" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
     </div>
   </header>
     
