--- a/games.html
+++ b/games.html
@@ -64,7 +64,7 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
  <!-- Header video -->
-  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; max-height:1080px; overflow:hidden; padding-top:50px;">
+  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:100vh; overflow:hidden; padding-top:50px;">
     <div>
       <iframe width="aspect-ratio: 16 / 9;" height="aspect-ratio: 16 / 9;" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
     </div>
