--- a/games.html
+++ b/games.html
@@ -77,7 +77,6 @@
 
     <div style="text-align: center;" class="w3-center">
       <h3><b>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</b></h2>
-      <br>
       <p>Fate's Loop is a stylised medieval fantasy adventure where you must solve puzzles, fight monsters, build relationships, and more, in order to save the village of Farbell from a time loop curse.</p>
     </div>
   </div>
@@ -97,6 +96,7 @@
     <div class="w3-third w3-container">
      <img class="w3-image pictureOutline" src="Images/AstralForge_FatesLoop.png" alt="Fates Loop Logo Image" width="100%" height="200px">
     </div>
+   </div>
 
      <br><br>
   
