--- a/games.html
+++ b/games.html
@@ -78,6 +78,7 @@
     <div style="text-align: center;" class="w3-center">
       <h3><b>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</b></h2>
       <p>Fate's Loop is a stylised medieval fantasy adventure where you must solve puzzles, fight monsters, build relationships, and more, in order to save the village of Farbell from a time loop curse.</p>
+      <p>But with every day cursed to repeat exactly the same, you must plan wisely what you enchant to save and what is lost to time.</p>
     </div>
   </div>
 
