--- a/team.html
+++ b/team.html
@@ -89,6 +89,7 @@
       </div>
       
       <div class="w3-col w3-container w3-third teamPlace">
+        <img src="Images/ProtoPlayTeam.JPG" alt="The Team">
         <!--
         <div class="highlight-box w3-left">
           <div class="w3-center"><img class="teamImage" src="Images/Jack.jpeg" alt="Jack Edwards"></div>
