--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
       </div>
       
       <div class="w3-col w3-container w3-third teamPlace">
-        <img src="Images/ProtoPlayTeam.JPG" alt="The Team" class="w3-center">
+        <img src="Images/ProtoPlayTeam.JPG" alt="The Team" class="w3-center" style="max-height:100%; max-width:100%;">
         <!--
         <div class="highlight-box w3-left">
           <div class="w3-center"><img class="teamImage" src="Images/Jack.jpeg" alt="Jack Edwards"></div>
