--- a/games.html
+++ b/games.html
@@ -138,7 +138,7 @@
       <div class="w3-col w3-container w3-third">
         <!-- Legal -->
         <h2 class="w3-center headingFooter"><b>LEGAL</b></h2>
-        <p class="w3-center" style="color:white; font-size:20px;">Privacy | Cookies</p>
+        <p class="w3-center" style="color:white; font-size:20px;">Coming Soon</p>
       </div>
     </div>
 
@@ -177,7 +177,7 @@
       <div class="w3-col w3-container w3-third">
         <!-- Legal -->
         <h2 class="w3-center headingFooter"><b>LEGAL</b></h2>
-        <p class="w3-center" style="color:white; font-size:20px;">Privacy | Cookies</p>
+        <p class="w3-center" style="color:white; font-size:20px;">Coming Soon</p>
       </div>
     </div>
 
