--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <title>Astral Forge</title>
 
   <!-- Adding a favicon -->
-  <link rel="icon" href="Images/Favicon.png">
+  <link rel="icon" href="Images/Logo/Favicon.png">
   <!-- Adding an apple touch icon -->
-  <link rel="apple-touch-icon" href="Images/Favicon.png">
+  <link rel="apple-touch-icon" href="Images/Logo/Favicon.png">
 
   <!-- Adding the css style sheets -->
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -49,8 +49,8 @@
     <a href="javascript:void(0)" id="hamburgerMenu" class="w3-bar-item w3-right topNavButton" style="padding-top:20px;"
       onclick="myFunction()">&#9776;</a>
     <!-- Logo -->
-    <a href="index.html"><img class="logoNav w3-left w3-hide-small w3-hide-medium" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
-    <a href="index.html"><img class="w3-center w3-hide-large logoNav" style="height:100px;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+    <a href="index.html"><img class="logoNav w3-left w3-hide-small w3-hide-medium" src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+    <a href="index.html"><img class="w3-center w3-hide-large logoNav" style="height:100px;" src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
     <!-- Aligns the links to the right and hides them on a small page -->
     <div class="w3-right w3-hide-small" style="padding-top:15px;">
       <!-- Home -->
@@ -70,18 +70,18 @@
   <!-- Header video -->
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
-      <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
+      <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/Logo/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
       <div style="position:relative; width:100%; height:100vh;">
          <img id="top" 
-         src="Images/AstralForge_DarkHorizontal.svg" 
+         src="Images/Logo/AstralForge_DarkHorizontal.svg" 
          alt="Astral Forge Logo and Name"
          style="position:absolute; top:40%; left:50%; transform:translate(-50%, -50%); width:60%;">
     </div>
   </header>
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-medium w3-hide-large" style="max-width:100%; height:300px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
-      <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-      <div>><img id="top" class="w3-center" style="top:80px; left:0px; position:absolute; text-align:center; justify-content:center;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
+      <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/Logo/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
+      <div>><img id="top" class="w3-center" style="top:80px; left:0px; position:absolute; text-align:center; justify-content:center;" src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
   </header>
 
   <!-- Company Moto -->
@@ -115,10 +115,10 @@
     <h2 class="quoteContainerTitle w3-center">A Bit More:</h2>
     <p class="item-1">Sign up to our Mailing List!<br><a class="qLinks" href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">The main software that we are using:     
-      <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
-      <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
-      <img class="qImages" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
-      <img class="qImages" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
+      <img class="qImages" src="Images/Software/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/Software/MayaLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/Software/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/Software/PhotoshopLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/Software/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/Software/SubstanceLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/Software/ViconLogo.png" alt="Link to TikTok."></p>
     <p class="item-3">Follow us on social media!<br><a class="qLinks" href="https://beacons.ai/astralforge" target="_blank">Click Here!</a></p>  
   </div>
   <!-- Quote slideshow large -->
@@ -126,10 +126,10 @@
     <h2 class="quoteContainerTitle w3-center">A Bit More:</h2>
     <p class="item-1">Sign up to our Mailing List!<br> <a class="qLinks" href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
     <p class="item-2">The main software that we are using:  
-      <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
-      <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
-      <img class="qImages" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
-      <img class="qImages" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
+      <img class="qImages" src="Images/Software/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/Software/MayaLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/Software/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/Software/PhotoshopLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/Software/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/Software/SubstanceLogo.png" alt="Link to TikTok.">
+      <img class="qImages" src="Images/Software/ViconLogo.png" alt="Link to TikTok."></p>
     <p class="item-3">Follow us on social media!<br><a class="qLinks" href="https://beacons.ai/astralforge" target="_blank">Click Here!</a></p>
   </div>
 
@@ -216,10 +216,10 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:100%; max-width:400px;" src="Images/UOSLogo.jpg" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:100%; max-width:400px;" src="Images/Events/UOSLogo.jpg" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/UOSLogo.jpg" alt="Tranzfuser Loog" width="100%" height="100%">
+      <img class="w3-image pictureOutline" src="Images/Events/UOSLogo.jpg" alt="Tranzfuser Loog" width="100%" height="100%">
     </div>
 
     <!-- About Tranzfuser section header -->
@@ -246,10 +246,10 @@
      <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:200px; max-width:400px;" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
+      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:200px; max-width:400px;" src="Images/Events/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay" width="100%" height="100%">
+      <img class="w3-image pictureOutline" src="Images/Events/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay" width="100%" height="100%">
     </div>
   </div>
 
@@ -260,10 +260,10 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:100%; max-width:400px;" src="Images/TranzfuserLogo.png" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:100%; max-width:400px;" src="Images/Events/TranzfuserLogo.png" alt="Tranzfuser Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
+      <img class="w3-image pictureOutline" src="Images/Events/TranzfuserLogo.png" alt="Tranzfuser Loog" width="100%" height="100%">
     </div>
 
     <!-- About Tranzfuser section header -->
@@ -291,7 +291,7 @@
       <div class="w3-col w3-container w3-third"></div>
       <div class="w3-col w3-container w3-third w3-center">
         <!-- Logo -->
-        <a href="index.html"><img class="logoFooter" src="Images/AstralForge_LightHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+        <a href="index.html"><img class="logoFooter" src="Images/Logo/AstralForge_LightHorizontal.svg" alt="Astral Forge Logo and Name."></a>
       </div>
       <div class="w3-col w3-container w3-third"></div>
     </div>
@@ -308,9 +308,9 @@
         <!-- Social -->
         <h2 class="headingFooter"><b>SOCIALS</b></h2>
         <!-- Large screens -->
-        <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/InstagramLogo.png" alt="Link to Instagram."></a>
-        <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding-left:5px; padding-right:5px;"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
-        <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/TikTokLogo.png" alt="Link to TikTok."></a>
+        <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/Software/InstagramLogo.png" alt="Link to Instagram."></a>
+        <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding-left:5px; padding-right:5px;"><img class="socialFooterLarge" src="Images/Software/Bluesky Logo.png" alt="Link to BlueSky."></a>
+        <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/Software/TikTokLogo.png" alt="Link to TikTok."></a>
       </div>
       
       <div class="w3-col w3-container w3-third">
@@ -330,7 +330,7 @@
       <div class="w3-col w3-container w3-third"></div>
       <div class="w3-col w3-container w3-third w3-center">
         <!-- Logo -->
-        <a href="index.html"><img class="logoFooter" src="Images/AstralForge_LightHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+        <a href="index.html"><img class="logoFooter" src="Images/Logo/AstralForge_LightHorizontal.svg" alt="Astral Forge Logo and Name."></a>
       </div>
       <div class="w3-col w3-container w3-third"></div>
     </div>
@@ -347,9 +347,9 @@
         <!-- Social -->
         <h2 class="headingFooter"><b>SOCIALS</b></h2>
         <!-- Large screens -->
-        <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/InstagramLogo.png" alt="Link to Instagram."></a>
-        <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding:5px;"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
-        <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/TikTokLogo.png" alt="Link to TikTok."></a>
+        <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/Software/InstagramLogo.png" alt="Link to Instagram."></a>
+        <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank" style="padding:5px;"><img class="socialFooterLarge" src="Images/Software/Bluesky Logo.png" alt="Link to BlueSky."></a>
+        <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/Software/TikTokLogo.png" alt="Link to TikTok."></a>
       </div>
       
       <div class="w3-col w3-container w3-third">
