--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:100%; max-width:400px;" src="Images/Events/UOSLogo.jpg" alt="Tranzfuser Logo">
+      <img class="w3-image pictureOutline w3-center" style="padding-top:5px; max-height:100%; max-width:400px;" src="Images/Events/UOSLogo.jpg" alt="University of Staffordshire Logo">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
-      <img class="w3-image pictureOutline" src="Images/Events/UOSLogo.jpg" alt="Tranzfuser Loog" width="100%" height="100%">
+      <img class="w3-image pictureOutline" src="Images/Events/UOSLogo.jpg" alt="University of Staffordshire Logo" width="100%" height="100%">
     </div>
 
     <!-- About Tranzfuser section header -->
