--- a/games.html
+++ b/games.html
@@ -72,6 +72,8 @@
     
   <div>
     <h1 class="w3-center" style="padding-top:20px;"> Fate's Loop </h1>
+    <br>
+    <h3 class="w3-center">Coming to Steam when its ready</h3>
 
     <br><br>
 
