--- a/index.html
+++ b/index.html
@@ -284,8 +284,12 @@
       <h3 class="w3-center"><b>PREVIOUS EVENTS,</b></h3>
     <br>
 
-    <div class="eventSquare">
+    <div class="w3-row">
       
+    <div class="w3-col w3-container w3-third eventSquare">
+      <p>TRANZFUSER</p>
+    </div>
+
     </div>
   </div>
 
