--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
 
     <div class="w3-row">
       <div class="w3-col w3-container m1 w3-center eventSquare">1</div>
-      <div class="w3-col w3-container m1 w3-center">2</div>
-      <div class="w3-col w3-container m1 w3-center">3</div>
-      <div class="w3-col w3-container m1 w3-centery">4</div>
-      <div class="w3-col w3-container m1 w3-center">5</div>
+      <div class="w3-col w3-container m1 w3-center eventSquare">2</div>
+      <div class="w3-col w3-container m1 w3-center eventSquare">3</div>
+      <div class="w3-col w3-container m1 w3-centery eventSquare">4</div>
+      <div class="w3-col w3-container m1 w3-center eventSquare">5</div>
     </div>
   </div>
 
