Fix class for event row layout

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       <h3 class="w3-center"><b>PREVIOUS EVENTS,</b></h3>
     <br>
 
-    <div class="w3-row w3-padding">
+    <div class="w3-row w3-row-padding">
       <div class="w3-col m2 w3-center eventSquare">1</div>
       <div class="w3-col m2 w3-center eventSquare">2</div>
       <div class="w3-col m2 w3-center eventSquare">3</div>
