--- a/index.html
+++ b/index.html
@@ -307,7 +307,10 @@
       </div>
       
       <div class="w3-col m2 w3-center">
-        <div class="eventSquare"><p class="padding-top:2px;">GradEx Degree Show</p></div>
+        <div class="eventSquare">
+          <img class="w3-image padding:2px;" src="Images/Events/UOSLogo.png" alt="University of Staffordshire Logo" width="100%" height="100%">
+          <p class="padding-top:2px;">GradEx Degree Show</p>
+        </div>
       </div>
       
     </div>
