Wrap image in a div for centering

--- a/index.html
+++ b/index.html
@@ -300,7 +300,9 @@
       
       <div class="w3-col m2 w3-center">
         <div class="eventSquare">
-          <img class="w3-image eventSquareImage" src="Images/Events/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
+          <div class="w3-center" style="height:100px;">
+            <img class="w3-image eventSquareImage" src="Images/Events/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
+          </div>
           <p class="padding-top:2px;">ProtoPlay</p>
         </div>
       </div>
