Add padding to event row and adjust layout

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <h3 class="w3-center"><b>PREVIOUS EVENTS,</b></h3>
     <br>
 
-    <div class="w3-row w3-row-padding">
+    <div class="w3-row w3-row-padding" style="padding-left:5%; padding-right:5%;">
       
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
@@ -311,6 +311,8 @@
       </div>      
     </div>
 
+    <br>
+    
     <div class="w3-row w3-row-padding">
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
