--- a/index.html
+++ b/index.html
@@ -287,26 +287,26 @@
       
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
-          <h3 class="padding-top:2px;">EGX & MCM Comic Con</h3>
+          <h3 style="padding-top:2px;">EGX & MCM Comic Con</h3>
         </div>
       </div>
       <br class="w3-hide-large">
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
-          <h3 class="padding-top:2px;">Ukie Student Conference</h3>
+          <h3 style="padding-top:2px;">Ukie Student Conference</h3>
         </div>
       </div>
       <br class="w3-hide-large">
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
           <img class="w3-image eventSquareImage" src="Images/Events/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
-          <h3 class="padding-top:2px;">ProtoPlay</h3>
+          <h3 style="padding-top:2px;">ProtoPlay</h3>
         </div>
       </div>
       <br class="w3-hide-large">
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
-          <h3 class="padding-top:2px;">Develop:Brighton</h3>
+          <h3 style="padding-top:2px;">Develop:Brighton</h3>
         </div>
       </div>      
     </div>
@@ -317,14 +317,14 @@
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
           <img class="w3-image eventSquareImage" src="Images/Events/TranzfuserLogo.png" alt="Tranzfuser Loog">
-          <p class="padding-top:2px;">Tranzfuser</p>
+          <p style="padding-top:2px;">Tranzfuser</p>
         </div>
       </div>
       
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
           <img class="w3-image eventSquareImage" src="Images/Events/UOSLogoWhite.png" alt="University of Staffordshire Logo">
-          <p class="padding-top:2px;">GradEx Degree Show</p>
+          <p style="padding-top:2px;">GradEx Degree Show</p>
         </div>
       </div>    
     </div>
