--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
           <h3 style="padding-top:2px;">EGX & MCM Comic Con</h3>
-          <div class="w3-col w3-container w3-center eventSquareSmall" style="width:30%">
+          <div class="w3-col w3-container eventSquareSmall" style="width:30%">
             <p><b>2025</b></p>
           </div>
           <div class="w3-col w3-container" style="width:70%">
