--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div class="eventSquare w3-center">
           <h3 style="padding-top:2px;">EGX & MCM Comic Con</h3>
           <div class="w3-row">
-            <div class="w3-col w3-container eventSquareSmall" style="width:30%">
+            <div class="w3-col w3-container eventSquareSmall w3-center" style="width:30%">
               <p><b>26</b></p>
               <p>DEC</p>
               <p>2025</p>
@@ -305,7 +305,7 @@
         <div class="eventSquare w3-center">
           <h3 style="padding-top:2px;">Ukie Student Conference</h3>
           <div class="w3-row">
-            <div class="w3-col w3-container eventSquareSmall" style="width:30%">
+            <div class="w3-col w3-container eventSquareSmall w3-center" style="width:30%">
               <p><b>22</b></p>
               <p>OCT</p>
               <p>2025</p>
@@ -322,7 +322,7 @@
           <img class="w3-image eventSquareImage" src="Images/Events/ProtoplayTeams.jpg" alt="Tranzfuser Teams at Protoplay">
           <h3 style="padding-top:2px;">ProtoPlay</h3>
           <div class="w3-row">
-            <div class="w3-col w3-container eventSquareSmall" style="width:30%">
+            <div class="w3-col w3-container eventSquareSmall w3-center" style="width:30%">
               <p><b>19 - 20</b></p>
               <p>SEP</p>
               <p>2025</p>
@@ -338,7 +338,7 @@
         <div class="eventSquare w3-center">
           <h3 style="padding-top:2px;">Develop:Brighton</h3>
           <div class="w3-row">
-            <div class="w3-col w3-container eventSquareSmall" style="width:30%">
+            <div class="w3-col w3-container eventSquareSmall w3-center" style="width:30%">
               <p><b>8 - 10</b></p>
               <p>JUL</p>
               <p>2025</p>
