--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
-          <img class="w3-image eventSquareImage" src="Images/Events/Ukie.jpg" alt="Abbygale presenting at the Ukie Conference">
+          <img class="w3-image eventSquareImage" src="Images/Events/UkieConference.jpg" alt="Abbygale presenting at the Ukie Conference">
           <h3 style="padding-top:2px;">Ukie Student Conference</h3>
           <div class="w3-row">
             <div class="w3-col w3-container eventSquareSmall w3-center" style="width:30%">
