--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p>ProtoPlay was the first public showcase that we attended to recieve feedback on Fate's Loop. It was amazing to travel to Dundee, Scotland and meet our fellow Tranzfuser teams.</p>
+              <p>ProtoPlay was our first public showcase to recieve feedback on Fate's Loop. It was amazing to travel to Dundee, Scotland and meet our fellow Tranzfuser teams.</p>
             </div>
           </div>
         </div>
