--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p>In Dundee, Scotland, ProtoPlay was our first public showcase to recieve feedback on Fate's Loop.</p>
+              <p>In Dundee, Scotland, ProtoPlay was our first public showcase to receive feedback on Fate's Loop. A great opportunity provided by Tranzfuser.</p>
             </div>
           </div>
         </div>
