--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p style="color:#bababa;">Fate's Loop was showcased at EGX and MCM Comic Con at Excel London. A huge thanks to Game Anglia for providing a space for us at their booth.</p>
+              <p style="color:#bdbdbd;">Fate's Loop was showcased at EGX and MCM Comic Con at Excel London. A huge thanks to Game Anglia for providing a space for us at their booth.</p>
             </div>
           </div>
         </div>
@@ -317,7 +317,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p style="color:#bababa;">Abbygale attended the Ukie Student Conference at the University of Staffordshire to co-present a panel on starting a company.</p>
+              <p style="color:#bdbdbd;">Abbygale attended the Ukie Student Conference at the University of Staffordshire to co-present a panel on starting a company.</p>
             </div>
           </div>
         </div>
@@ -336,7 +336,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p style="color:#bababa;">In Dundee, Scotland, ProtoPlay was our first public showcase to receive feedback on Fate's Loop. A great opportunity provided by Tranzfuser.</p>
+              <p style="color:#bdbdbd;">In Dundee, Scotland, ProtoPlay was our first public showcase to receive feedback on Fate's Loop. A great opportunity provided by Tranzfuser.</p>
             </div>
           </div>
         </div>
@@ -355,7 +355,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p style="color:#bababa;">Develop:Brighton was a great place to network and connect with people whilst also promoting ourselves and Astral Forge.</p>
+              <p style="color:#bdbdbd;">Develop:Brighton was a great place to network and connect with people whilst also promoting ourselves and Astral Forge.</p>
             </div>
           </div>
         </div>
