--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
         <h3 style="padding-top:2px;">Tranzfuser</h3>
         <div class="w3-row">
           <div class="w3-col w3-container eventSquareSmall w3-center" style="width:30%">
-            <p><b>JUNE -</b></p>
-            <p>SEPTEMBER</p>
+            <p>JUN -</p>
+            <p>SEP</p>
             <p>2025</p>
           </div>
           <div class="w3-col w3-container" style="width:70%">
