--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div class="imageWrap">
             <img class="w3-image eventSquareImage" src="Images/Events/UOSLogoWhite.png" alt="University of Staffordshire Logo">
           </div>
-          <h3 style="padding-top:2px;">BE Inspired</h3>
+          <h3 style="padding-top:2px;">Be Inspired</h3>
           <div class="w3-row">
             <div class="w3-col w3-container eventSquareSmall w3-center" style="width:30%">
               <p>JAN -</p>
@@ -232,7 +232,12 @@
             </div>
           </div>
         </div>
+      </div
+
+      <div class="w3-col m3 w3-center">
+        <p style="color:black;">Check back here for more upcoming events!</p>
       </div>
+      
     </div>
     
   </div>
