--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
         </div>
       </div
 
-      <div class="w3-col m9 w3-center">
+      <div class="w3-col m2 w3-center">
+      </div>
+        
+      <div class="w3-col m2 w3-center">
         <p style="color:black;">Check back here for more upcoming events!</p>
       </div>
       
