--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </div>
         
       <div class="w3-col m3 w3-center">
-        <p style="color:black;">Check back here for more upcoming events!</p>
+        <p>Check back here for more upcoming events!</p>
       </div>
       
     </div>
