--- a/index.html
+++ b/index.html
@@ -232,21 +232,16 @@
             </div>
           </div>
         </div>
-      </div
+      </div>
 
       <div class="w3-col m3 w3-center">
-        <div class="eventSquare w3-center">
-        </div>
-      </div
+      </div>
         
       <div class="w3-col m3 w3-center">
-        <div class="eventSquare w3-center">
-        </div>
-      </div
+        <p>Check back for more upcoming events...</p>
+      </div>
 
       <div class="w3-col m3 w3-center">
-        <div class="eventSquare w3-center">
-        </div>
       </div>
       
     </div>
