--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
       </div>
         
       <div class="w3-col m3 w3-center">
-        <p>Check back for more upcoming events...</p>
+        <div class="imageWrap">
+          <p>Check back for more upcoming events...</p>
+        </div>
       </div>
 
       <div class="w3-col m3 w3-center">
