--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="w3-col m3 w3-center">
         <div class="eventSquare w3-center">
           <div class="imageWrap">
-            <img class="w3-image eventSquareImage" src="Images/Events/EGXLogo.png" alt="EGX Logo">
+            <img class="w3-image eventSquareImage" src="Images/Events/GameAngliaDirect.png" alt="Game Anglia Direct Logo">
           </div>
           <h3 style="padding-top:2px;">Game Anglia Direct</h3>
           <div class="w3-row">
@@ -289,7 +289,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p style="color:#bdbdbd;">Fate's Loop was showcased at EGX and MCM Comic Con at Excel London. A huge thanks to Game Anglia for providing a space for us at their booth.</p>
+              <p style="color:#bdbdbd;">Fate's Loop was showcased on the Game Anglia Direct stream promoting games made in the East of England.</p>
             </div>
           </div>
         </div>
