--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
               <p>2025</p>
             </div>
             <div class="w3-col w3-container" style="width:70%">
-              <p style="color:#bdbdbd;">Fate's Loop was showcased on the Game Anglia Direct stream promoting games made in the East of England.</p>
+              <p style="color:#bdbdbd;">Fate's Loop was showcased on the Game Anglia Direct stream and we had a great day networking with other developers.</p>
             </div>
           </div>
         </div>
