--- a/games.html
+++ b/games.html
@@ -64,7 +64,7 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
  <!-- Header video -->
-  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" height:50vh; overflow:hidden; padding-top:50px;">
+  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" height:50px; overflow:hidden; padding-top:50px;">
     <div>
       <!--<iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>-->
     </div>
