--- a/games.html
+++ b/games.html
@@ -85,24 +85,28 @@
     </div>
   </div>
 
-   <div class="w3-container w3-row">
-    <!-- Our History Header -->
+  <div class="w3-container w3-row">
+    <!-- Pic 1 -->
     <div class="w3-third w3-container">
        <img class="w3-image pictureOutline" src="Images/Games/AstralForge_Showcase.jpg" alt="Fates Loop Showcase Image" width="100%" height="200px">
     </div>
 
-    <!-- Our Mission Header -->
+    <!-- Pic 2 -->
     <div class="w3-third w3-container">
        <img class="w3-image pictureOutline" src="Images/Games/AstralForge_Action.jpg" alt="Fates Loop Action Image" width="100%" height="200px">
     </div>
 
-    <!-- Meet the Team Header -->
+    <!-- Pic 3 -->
     <div class="w3-third w3-container">
      <img class="w3-image pictureOutline" src="Images/Games/AstralForge_FatesLoop.png" alt="Fates Loop Logo Image" width="100%" height="200px">
     </div>
-   </div>
+  </div>
 
-     <br><br>
+  <div class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="overflow:hidden; padding-top:50px;">
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DDPGsVt02Wk" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+   <br><br>
   
   </main>
 
