--- a/games.html
+++ b/games.html
@@ -82,6 +82,8 @@
       <h3><b>You play as Thalor, a retired elven hero who must save his village from a time loop curse.</b></h2>
       <p>Fate's Loop is a stylised medieval fantasy adventure where you must solve puzzles, fight monsters, build relationships, and more, in order to save the village of Farbell from a time loop curse.</p>
       <p>But with every day cursed to repeat exactly the same, you must plan wisely what you enchant to save and what is lost to time.</p>
+      <p>Explore the fantasy village of Farbell to break the curse and maybe find a few secrets along the way.</p>
+      <p>Decisions matter and they will change how the characters treat you and how your story progresses.</p>
     </div>
   </div>
 
