--- a/games.html
+++ b/games.html
@@ -83,7 +83,7 @@
     </div>
   </div>
 
-  <div class="twoColumnLayout">
+  <div class="twoColumnLayout w3-center">
     <div class="section left">
       <img class="w3-image pictureOutline" src="Images/Game/FatesLoop_Action.jpg" alt="Fates Loop Action Image" width="100%" height="200px">
       <br>
@@ -101,16 +101,16 @@
     
   <br><br>
 
-  <div class="twoColumnLayout">
+  <div class="twoColumnLayout w3-center">
     <div class="section left">
-      <img class="w3-image pictureOutline" src="Images/Game/FatesLoop_1.jpg" alt="Fates Loop Showcase Image" width="100%" height="200px">
+      <img class="w3-image pictureOutline" src="Images/Game/FatesLoop_1.png" alt="Fates Loop Showcase Image" width="100%" height="200px">
       <br>
       <h3>Plan For Time</h3>
       <p>With every day cursed to repeat exactly the same, you must plan wisely what you enchant to save and what is lost to time.</p>
     </div>
     
     <div class="section right">
-      <img class="w3-image pictureOutline" src="Images/Game/FatesLoop_3.jpg" alt="Fates Loop Action Image" width="100%" height="200px">
+      <img class="w3-image pictureOutline" src="Images/Game/FatesLoop_3.png" alt="Fates Loop Action Image" width="100%" height="200px">
       <br>
       <h3>The Adventure Awaits</h3>
       <p>Explore the fantasy village of Farbell to break the curse and maybe find a few secrets along the way.</p>
