--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body style="background-colour:black; color:white;">
+<body style="background:#292929; color:white;">
   <script src="script.js"></script>
   <main>
 
