--- a/index.html
+++ b/index.html
@@ -67,19 +67,16 @@
 <!-- Page Content -->
 <!----------------------------------------------------------------------------- -->
   
-  <!-- Header video -->
+  <!-- Header Image -->
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden; padding-top:50px;">
-    <!-- Large screen video -->
-      <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/Logo/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-      <div style="position:relative; width:100%; height:100vh;">
-         <img id="top" 
-         src="Images/Logo/AstralForge_DarkHorizontal.svg" 
-         alt="Astral Forge Logo and Name"
-         style="position:absolute; top:40%; left:50%; transform:translate(-50%, -50%); width:60%;">
+    <!-- Large Image -->
+    <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/Logo/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
+    <div style="position:relative; width:100%; height:100vh;">
+       <img id="top" src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name" style="position:absolute; top:40%; left:50%; transform:translate(-50%, -50%); width:60%;">
     </div>
   </header>
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-medium w3-hide-large" style="max-width:100%; height:300px; overflow:hidden; padding-top:50px;">
-    <!-- Large screen video -->
+    <!-- Small Image -->
       <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/Logo/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
       <div>><img id="top" class="w3-center" style="top:80px; left:0px; position:absolute; text-align:center; justify-content:center;" src="Images/Logo/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
   </header>
@@ -87,10 +84,10 @@
   <!-- Company Moto -->
   <h2 class="w3-center" style="font-size:35px;"><b><i>Creating immersive story-driven worlds for our players to explore and enjoy!</i></b></h2>
 
+  <!-- Company About Us Section and Image -->
   <div class="w3-row">
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small w3-center" style="width:30%">
-      <!-- Placeholder -->
       <img class="w3-image pictureOutline" style="height:300px" src="Images/ProtoPlayTeam.JPG" alt="The Team">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
@@ -135,7 +132,7 @@
 
   <br>
 
-  <!-- Section header -->
+  <!-- Welcome To Astral Forge Section header -->
   <h2 class="w3-center w3-hide-small" style="font-size:30px;"><b>WELCOME TO ASTRAL FORGE,</b></h2>
   <h3 class="w3-center w3-hide-large w3-hide-medium" style="font-size:20px;"><b>WELCOME TO ASTRAL FORGE,</b></h3>
   <p class="w3-center w3-hide-small" style="font-size:25px; margin-top:-10px;">An indie company working to create fantasy worlds for our audiences to enjoy.</p>
@@ -206,8 +203,9 @@
 
   <br><hr><br>
   
-  <!-- Section header -->
-  <p class="w3-center" style="font-size:20px; margin-top:-10px;">The team at Astral Forge have been busy and not just with game development.</p>
+  <!-- Events Section header -->
+  <p class="w3-center w3-hide-small" style="font-size:20px;">The team at Astral Forge have been busy and not just with game development.</p>
+  <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:15px; text-align:center;">The team at Astral Forge have been busy and not just with game development.</p>
   <div>
     
     <h3 class="w3-center"><b>UPCOMING EVENTS,</b></h3>
