--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
       <div class="mySlides fade">
         <div class="numberText">1/2</div>
-        <div class="w3-col m3 w3-center">
+        <div class="w3-col m3 w3-center" style="padding-left:5%; padding-right:5%;">
           <a href="https://www.gameanglia.co.uk/direct/" target="_blank">
             <div class="eventSquare w3-center">
               <div class="imageWrap">
