--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <!-- <div class="w3-row w3-row-padding" style="padding-left:5%; padding-right:5%;"> -->
     <div class="w3-row w3-row-padding">
 
-      <div class="mySlides fade">
+      <div class="mySlides fade w3-row w3-row-padding>
         <div class="numberText">1/2</div>
         <div class="w3-col m3 w3-center">
           <a href="https://www.gameanglia.co.uk/direct/" target="_blank">
@@ -345,7 +345,7 @@
         </div> 
       </div>
         
-      <div class="mySlides fade">
+      <div class="mySlides fade w3-row w3-row-padding">
         <div class="numberText">2/2</div>
         <div class="w3-col m3 w3-center">
           <a href="https://www.developconference.com/" target="_blank">
