--- a/team.html
+++ b/team.html
@@ -163,8 +163,8 @@
       <div class="fourColumnLayout w3-center">
         <div class="section one">
           <div class="highlight-box w3-center">
-            <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
-            <h2 class="w3-center"><b>Antony</b></h2>
+            <div class="w3-center"><img class="teamImage" src="Images/Team/Antony.jpg" alt="Antony Garbett"></div>
+            <h2 class="w3-center"><b>Antony Garbett</b></h2>
             <h4 class="w3-center">Character Modeller</h4>
           </div>
         </div>
