Refactor team layout to improve structure

--- a/team.html
+++ b/team.html
@@ -158,38 +158,40 @@
         </div>
       </div>
 
-      <br class="w3-hide-small"><p>T</p>
+      <br class="w3-hide-small">
 
-      <div class="fourColumnLayout w3-center">
-        <div class="section one">
-          <div class="highlight-box w3-center">
-            <div class="w3-center"><img class="teamImage" src="Images/Team/Antony.jpg" alt="Antony Garbett"></div>
-            <h2 class="w3-center"><b>Antony Garbett</b></h2>
-            <h4 class="w3-center">Character Modeller</h4>
+      <div class="w3-row">
+        <div class="fourColumnLayout w3-center">
+          <div class="section one">
+            <div class="highlight-box w3-center">
+              <div class="w3-center"><img class="teamImage" src="Images/Team/Antony.jpg" alt="Antony Garbett"></div>
+              <h2 class="w3-center"><b>Antony Garbett</b></h2>
+              <h4 class="w3-center">Character Modeller</h4>
+            </div>
           </div>
-        </div>
-        
-        <div class="section two">
-          <div class="highlight-box w3-center">
-            <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
-            <h2 class="w3-center"><b>Ciara</b></h2>
-            <h4 class="w3-center">Concept Artist</h4>
+          
+          <div class="section two">
+            <div class="highlight-box w3-center">
+              <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
+              <h2 class="w3-center"><b>Ciara</b></h2>
+              <h4 class="w3-center">Concept Artist</h4>
+            </div>
           </div>
-        </div>
-
-        <div class="section three">
-          <div class="highlight-box w3-center">
-            <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
-            <h2 class="w3-center"><b>Owen</b></h2>
-            <h4 class="w3-center">VFX Artist</h4>
+  
+          <div class="section three">
+            <div class="highlight-box w3-center">
+              <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
+              <h2 class="w3-center"><b>Owen</b></h2>
+              <h4 class="w3-center">VFX Artist</h4>
+            </div>
           </div>
-        </div>
-
-        <div class="section four">
-          <div class="highlight-box w3-center">
-            <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
-            <h2 class="w3-center"><b>Kris</b></h2>
-            <h4 class="w3-center">Designer</h4>
+  
+          <div class="section four">
+            <div class="highlight-box w3-center">
+              <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
+              <h2 class="w3-center"><b>Kris</b></h2>
+              <h4 class="w3-center">Designer</h4>
+            </div>
           </div>
         </div>
       </div>
