--- a/team.html
+++ b/team.html
@@ -161,7 +161,7 @@
           <h4 class="w3-center">Concept Artist</h4>
         </div>
         <div class="highlight-box2 w3-right">
-          <p class="w3-center"><b>Role -</b> </p>
+          <p class="w3-center"><b>Role -</b> Ciara is our concept artist, she designs everything big and small. Her visions are what you see, explore, and interact with throughout.</p>
           <p class="w3-center"><b>Why I Make Games -</b> ""</p>
           <p class="w3-center"><b>Favourite Game -</b> </p>
           <div style="display:flex; justify-content:center; align-items:center;">
@@ -173,7 +173,7 @@
         </div>
       </div>
 
-      <br class="w3-hide-small">
+      <br> <br class="w3-hide-small">
 
       <div class="w3-row">
         <div class="w3-col w3-container w3-third">
@@ -183,7 +183,7 @@
             <h4 class="w3-center">Character Artist</h4>
           </div>
           <div class="highlight-box2 w3-right">
-            <p class="w3-center"><b>Role -</b> </p>
+            <p class="w3-center"><b>Role -</b> Antony is our character artist, he makes all of the people and creatures you meet and gives them life and personality.</p>
             <p class="w3-center"><b>Why I Make Games -</b> ""</p>
             <p class="w3-center"><b>Favourite Game -</b> </p>
             <div style="display:flex; justify-content:center; align-items:center;">
@@ -202,7 +202,7 @@
             <h4 class="w3-center">VFX Artist</h4>
           </div>
           <div class="highlight-box2 w3-right">
-            <p class="w3-center"><b>Role -</b> </p>
+            <p class="w3-center"><b>Role -</b> Owen is our technical artist specialising in VFX. He adds the magic to the worlds and makes sure you feel each movement.</p>
             <p class="w3-center"><b>Why I Make Games -</b> ""</p>
             <p class="w3-center"><b>Favourite Game -</b> </p>
             <div style="display:flex; justify-content:center; align-items:center;">
@@ -221,7 +221,7 @@
             <h4 class="w3-center">Designer</h4>
           </div>
           <div class="highlight-box2 w3-right">
-            <p class="w3-center"><b>Role -</b> </p>
+            <p class="w3-center"><b>Role -</b> Kris designs the world, characters, and narratives in the game. He makes the world real and cohesive so that you can truly live there.</p>
             <p class="w3-center"><b>Why I Make Games -</b> ""</p>
             <p class="w3-center"><b>Favourite Game -</b> </p>
             <div style="display:flex; justify-content:center; align-items:center;">
