--- a/team.html
+++ b/team.html
@@ -156,7 +156,7 @@
       
       <div class="w3-col w3-container w3-third teamPlace">
         <div class="highlight-box w3-left">
-          <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
+          <div class="w3-center"><img class="teamImage" src="Images/Team/Jo.jpg" alt="Joseph Jefferies"></div>
           <h2 class="w3-center"><b>Ciara Doherty</b></h2>
           <h4 class="w3-center">Concept Artist</h4>
         </div>
@@ -197,7 +197,7 @@
   
          <div class="w3-col w3-container w3-third teamPlace">
           <div class="highlight-box w3-left">
-            <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
+            <div class="w3-center"><img class="teamImage" src="Images/Team/Je.jpg" alt="Joseph Jefferies"></div>
             <h2 class="w3-center"><b>Owen Stocking</b></h2>
             <h4 class="w3-center">VFX Artist</h4>
           </div>
@@ -216,7 +216,7 @@
         
         <div class="w3-col w3-container w3-third teamPlace">
           <div class="highlight-box w3-left">
-            <div class="w3-center"><img class="teamImage" src="Images/Team/Joe.jpg" alt="Joseph Jefferies"></div>
+            <div class="w3-center"><img class="teamImage" src="Images/Team/Je.jpg" alt="Joseph Jefferies"></div>
             <h2 class="w3-center"><b>Kristaps Uvis Erkskis</b></h2>
             <h4 class="w3-center">Designer</h4>
           </div>
