--- a/team.html
+++ b/team.html
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <br class="w3-hide-small">
+    <br class="w3-hide-small" style="margin-bottom: 40px;">
 
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
@@ -173,7 +173,7 @@
         </div>
       </div>
 
-      <br class="w3-hide-small"><p class="w3-hide-small" style="color:white;">-</p>
+      <br class="w3-hide-small" style="margin-bottom: 40px;">
 
       <div class="w3-row">
         <div class="w3-col w3-container w3-third">
