Replace empty divs with row-gap class

--- a/team.html
+++ b/team.html
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <div class="w3-hide-small" style="height:40px;"></div>
+    <div class="w3-hide-small row-gap"></div>
 
     <div class="w3-row">
       <div class="w3-col w3-container w3-third">
@@ -158,7 +158,7 @@
         </div>
       </div>
 
-       <div class="w3-hide-small" style="height:40px;"></div>
+       <div class="w3-hide-small row-gap"></div>
 
       <div class="w3-row">
         <div class="w3-col w3-container w3-third">
