Fix self-closing tag for stylesheet link

--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" href="Images/Logo/Favicon.png">
 
   <!-- Adding the css style sheets -->
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css">
 
   <!-- W3.CSS stylesheet -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
